# zk-research

./: README.md
GKR/: Cargo.toml
GKR/src/: lib.rs
GKR/src/circuits/: circuits.rs  gates.rs  layers.rs  mod.rs
fiat_shamir/: Cargo.toml
fiat_shamir/src/: fiat_shamir.rs
gkr/: Cargo.toml
gkr/src/circuits/: circuits.rs  gates.rs  mod.rs
gkr/src/gkr/: gkr.rs  mod.rs
kzg/: Cargo.toml
kzg/src/: lib.rs  multilinear_kzg.rs
multilinear/: Cargo.toml
multilinear/benches/: benchmark.rs  multilinear_benchmark.rs
multilinear/src/: lib.rs  main.rs
multilinear/src/coefficient_form/: dense_multilinear.rs  mod.rs  sparse_multilinear.rs
multilinear/src/evaluation_form/: mod.rs
shamir/: Cargo.toml
shamir/src/: main.rs  shamir.rs
stack101/src/: main.rs
stark101/: Cargo.toml
stark101/src/: main.rs
sum_check/: Cargo.toml
sum_check/benches/: benchmark.rs
sum_check/src/: lib.rs  sum_check.rs
univariate/: Cargo.toml
univariate/benches/: benchmark.rs
univariate/src/: dense_polynomial.rs  lib.rs  main.rs  polynomial.rs
