[package]
name = "sum_check"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.5.0"
univariate = {path = "../univariate"}
fiat_shamir = {path = "../fiat_shamir"}
multilinear = {path = "../multilinear"}
ark-bn254 = "0.5.0"
sha3 = "0.10.8"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness=false