[package]
name = "univariate"
path = "src/lib.rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
field-tracker = { git = "https://github.com/sublinearlabs/field-tracker", branch = "main" }

[[bench]]
name = "benchmark"
harness=false
